--- a/build-LinQuedin-Desktop_Qt_5_3_GCC_64bit-Debug/Makefile
+++ b/build-LinQuedin-Desktop_Qt_5_3_GCC_64bit-Debug/Makefile
@@ -60,8 +60,10 @@ SOURCES       = ../LinQuedin/main.cpp \
 		../LinQuedin/ubasic.cpp \
 		../LinQuedin/ubusiness.cpp \
 		../LinQuedin/uexecutive.cpp \
-		../LinQuedin/client.cpp qrc_resources.cpp \
-		moc_mainwindow.cpp
+		../LinQuedin/client.cpp \
+		../LinQuedin/loginwindow.cpp qrc_resources.cpp \
+		moc_mainwindow.cpp \
+		moc_loginwindow.cpp
 OBJECTS       = main.o \
 		mainwindow.o \
 		danagrafici.o \
@@ -78,8 +80,10 @@ OBJECTS       = main.o \
 		ubusiness.o \
 		uexecutive.o \
 		client.o \
+		loginwindow.o \
 		qrc_resources.o \
-		moc_mainwindow.o
+		moc_mainwindow.o \
+		moc_loginwindow.o
 DIST          = ../../../../Qt5.3.2/5.3/gcc_64/mkspecs/features/spec_pre.prf \
 		../../../../Qt5.3.2/5.3/gcc_64/mkspecs/common/shell-unix.conf \
 		../../../../Qt5.3.2/5.3/gcc_64/mkspecs/common/unix.conf \
@@ -202,7 +206,8 @@ DIST          = ../../../../Qt5.3.2/5.3/gcc_64/mkspecs/features/spec_pre.prf \
 		../LinQuedin/ubasic.cpp \
 		../LinQuedin/ubusiness.cpp \
 		../LinQuedin/uexecutive.cpp \
-		../LinQuedin/client.cpp
+		../LinQuedin/client.cpp \
+		../LinQuedin/loginwindow.cpp
 QMAKE_TARGET  = LinQuedin
 DESTDIR       = #avoid trailing-slash linebreak
 TARGET        = LinQuedin
@@ -467,7 +472,7 @@ qmake_all: FORCE
 
 dist: 
 	@test -d .tmp/LinQuedin1.0.0 || mkdir -p .tmp/LinQuedin1.0.0
-	$(COPY_FILE) --parents $(DIST) .tmp/LinQuedin1.0.0/ && $(COPY_FILE) --parents ../LinQuedin/resources.qrc .tmp/LinQuedin1.0.0/ && $(COPY_FILE) --parents ../LinQuedin/mainwindow.h ../LinQuedin/danagrafici.h ../LinQuedin/titolistudio.h ../LinQuedin/laurea.h ../LinQuedin/impieghi.h ../LinQuedin/lavoro.h ../LinQuedin/utente.h ../LinQuedin/profilo.h ../LinQuedin/database.h ../LinQuedin/rete.h ../LinQuedin/nodo.h ../LinQuedin/ubasic.h ../LinQuedin/ubusiness.h ../LinQuedin/uexecutive.h ../LinQuedin/client.h .tmp/LinQuedin1.0.0/ && $(COPY_FILE) --parents ../LinQuedin/main.cpp ../LinQuedin/mainwindow.cpp ../LinQuedin/danagrafici.cpp ../LinQuedin/titolistudio.cpp ../LinQuedin/laurea.cpp ../LinQuedin/impieghi.cpp ../LinQuedin/lavoro.cpp ../LinQuedin/utente.cpp ../LinQuedin/profilo.cpp ../LinQuedin/database.cpp ../LinQuedin/rete.cpp ../LinQuedin/nodo.cpp ../LinQuedin/ubasic.cpp ../LinQuedin/ubusiness.cpp ../LinQuedin/uexecutive.cpp ../LinQuedin/client.cpp .tmp/LinQuedin1.0.0/ && (cd `dirname .tmp/LinQuedin1.0.0` && $(TAR) LinQuedin1.0.0.tar LinQuedin1.0.0 && $(COMPRESS) LinQuedin1.0.0.tar) && $(MOVE) `dirname .tmp/LinQuedin1.0.0`/LinQuedin1.0.0.tar.gz . && $(DEL_FILE) -r .tmp/LinQuedin1.0.0
+	$(COPY_FILE) --parents $(DIST) .tmp/LinQuedin1.0.0/ && $(COPY_FILE) --parents ../LinQuedin/resources.qrc .tmp/LinQuedin1.0.0/ && $(COPY_FILE) --parents ../LinQuedin/mainwindow.h ../LinQuedin/danagrafici.h ../LinQuedin/titolistudio.h ../LinQuedin/laurea.h ../LinQuedin/impieghi.h ../LinQuedin/lavoro.h ../LinQuedin/utente.h ../LinQuedin/profilo.h ../LinQuedin/database.h ../LinQuedin/rete.h ../LinQuedin/nodo.h ../LinQuedin/ubasic.h ../LinQuedin/ubusiness.h ../LinQuedin/uexecutive.h ../LinQuedin/client.h ../LinQuedin/loginwindow.h .tmp/LinQuedin1.0.0/ && $(COPY_FILE) --parents ../LinQuedin/main.cpp ../LinQuedin/mainwindow.cpp ../LinQuedin/danagrafici.cpp ../LinQuedin/titolistudio.cpp ../LinQuedin/laurea.cpp ../LinQuedin/impieghi.cpp ../LinQuedin/lavoro.cpp ../LinQuedin/utente.cpp ../LinQuedin/profilo.cpp ../LinQuedin/database.cpp ../LinQuedin/rete.cpp ../LinQuedin/nodo.cpp ../LinQuedin/ubasic.cpp ../LinQuedin/ubusiness.cpp ../LinQuedin/uexecutive.cpp ../LinQuedin/client.cpp ../LinQuedin/loginwindow.cpp .tmp/LinQuedin1.0.0/ && (cd `dirname .tmp/LinQuedin1.0.0` && $(TAR) LinQuedin1.0.0.tar LinQuedin1.0.0 && $(COMPRESS) LinQuedin1.0.0.tar) && $(MOVE) `dirname .tmp/LinQuedin1.0.0`/LinQuedin1.0.0.tar.gz . && $(DEL_FILE) -r .tmp/LinQuedin1.0.0
 
 
 clean:compiler_clean 
@@ -494,12 +499,15 @@ compiler_rcc_clean:
 qrc_resources.cpp: ../LinQuedin/resources.qrc \
 		../LinQuedin/immagini/save.png \
 		../LinQuedin/immagini/linkedin.png \
-		../LinQuedin/immagini/exit.png
+		../LinQuedin/immagini/exit.png \
+		../LinQuedin/immagini/admin.png \
+		../LinQuedin/immagini/client.png \
+		../LinQuedin/immagini/new.png
 	/home/giacomo/Qt5.3.2/5.3/gcc_64/bin/rcc -name resources ../LinQuedin/resources.qrc -o qrc_resources.cpp
 
-compiler_moc_header_make_all: moc_mainwindow.cpp
+compiler_moc_header_make_all: moc_mainwindow.cpp moc_loginwindow.cpp
 compiler_moc_header_clean:
-	-$(DEL_FILE) moc_mainwindow.cpp
+	-$(DEL_FILE) moc_mainwindow.cpp moc_loginwindow.cpp
 moc_mainwindow.cpp: ../../../../Qt5.3.2/5.3/gcc_64/include/QtWidgets/QMainWindow \
 		../../../../Qt5.3.2/5.3/gcc_64/include/QtWidgets/qmainwindow.h \
 		../../../../Qt5.3.2/5.3/gcc_64/include/QtWidgets/qwidget.h \
@@ -620,6 +628,109 @@ moc_mainwindow.cpp: ../../../../Qt5.3.2/5.3/gcc_64/include/QtWidgets/QMainWindow
 		../../../../Qt5.3.2/5.3/gcc_64/include/QtWidgets/QAction \
 		../LinQuedin/mainwindow.h
 	/home/giacomo/Qt5.3.2/5.3/gcc_64/bin/moc $(DEFINES) -I/home/giacomo/Qt5.3.2/5.3/gcc_64/mkspecs/linux-g++ -I/home/giacomo/Scrivania/P2/PROGETTO/LinQuedin -I/home/giacomo/Qt5.3.2/5.3/gcc_64/include -I/home/giacomo/Qt5.3.2/5.3/gcc_64/include/QtWidgets -I/home/giacomo/Qt5.3.2/5.3/gcc_64/include/QtGui -I/home/giacomo/Qt5.3.2/5.3/gcc_64/include/QtCore -I. ../LinQuedin/mainwindow.h -o moc_mainwindow.cpp
+
+moc_loginwindow.cpp: ../../../../Qt5.3.2/5.3/gcc_64/include/QtWidgets/QWidget \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtWidgets/qwidget.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qwindowdefs.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qglobal.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qconfig.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qfeatures.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qsystemdetection.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qprocessordetection.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qcompilerdetection.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qtypeinfo.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qtypetraits.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qsysinfo.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qlogging.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qflags.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qbasicatomic.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_bootstrap.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qgenericatomic.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_msvc.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_armv7.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_armv6.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_armv5.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_ia64.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_mips.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_x86.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_cxx11.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_gcc.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_unix.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qglobalstatic.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qmutex.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qnumeric.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qobjectdefs.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qnamespace.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qobjectdefs_impl.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qwindowdefs_win.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qobject.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qstring.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qchar.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qbytearray.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qrefcount.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qarraydata.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qstringbuilder.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qlist.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qalgorithms.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qiterator.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qcoreevent.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qscopedpointer.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qmetatype.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qvarlengtharray.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qcontainerfwd.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qisenum.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qobject_impl.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qmargins.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qpaintdevice.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qrect.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qsize.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qpoint.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qpalette.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qcolor.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qrgb.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qstringlist.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qdatastream.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qiodevice.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qpair.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qregexp.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qstringmatcher.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qbrush.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qvector.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qmatrix.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qpolygon.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qregion.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qline.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qtransform.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qpainterpath.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qimage.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qpixmap.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qsharedpointer.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qshareddata.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qsharedpointer_impl.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qhash.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qfont.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qfontmetrics.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qfontinfo.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtWidgets/qsizepolicy.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qcursor.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qkeysequence.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qevent.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qvariant.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qmap.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qdebug.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qtextstream.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qlocale.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qset.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qcontiguouscache.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qurl.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qurlquery.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qfile.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qfiledevice.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qvector2d.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qtouchdevice.h \
+		../LinQuedin/loginwindow.h
+	/home/giacomo/Qt5.3.2/5.3/gcc_64/bin/moc $(DEFINES) -I/home/giacomo/Qt5.3.2/5.3/gcc_64/mkspecs/linux-g++ -I/home/giacomo/Scrivania/P2/PROGETTO/LinQuedin -I/home/giacomo/Qt5.3.2/5.3/gcc_64/include -I/home/giacomo/Qt5.3.2/5.3/gcc_64/include/QtWidgets -I/home/giacomo/Qt5.3.2/5.3/gcc_64/include/QtGui -I/home/giacomo/Qt5.3.2/5.3/gcc_64/include/QtCore -I. ../LinQuedin/loginwindow.h -o moc_loginwindow.cpp
 
 compiler_moc_source_make_all:
 compiler_moc_source_clean:
@@ -1749,11 +1860,117 @@ client.o: ../LinQuedin/client.cpp ../LinQuedin/client.h \
 		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/QXmlStreamAttributes
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o client.o ../LinQuedin/client.cpp
 
+loginwindow.o: ../LinQuedin/loginwindow.cpp ../LinQuedin/loginwindow.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtWidgets/QWidget \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtWidgets/qwidget.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qwindowdefs.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qglobal.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qconfig.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qfeatures.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qsystemdetection.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qprocessordetection.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qcompilerdetection.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qtypeinfo.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qtypetraits.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qsysinfo.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qlogging.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qflags.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qbasicatomic.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_bootstrap.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qgenericatomic.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_msvc.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_armv7.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_armv6.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_armv5.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_ia64.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_mips.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_x86.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_cxx11.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_gcc.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qatomic_unix.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qglobalstatic.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qmutex.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qnumeric.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qobjectdefs.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qnamespace.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qobjectdefs_impl.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qwindowdefs_win.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qobject.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qstring.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qchar.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qbytearray.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qrefcount.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qarraydata.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qstringbuilder.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qlist.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qalgorithms.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qiterator.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qcoreevent.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qscopedpointer.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qmetatype.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qvarlengtharray.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qcontainerfwd.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qisenum.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qobject_impl.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qmargins.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qpaintdevice.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qrect.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qsize.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qpoint.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qpalette.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qcolor.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qrgb.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qstringlist.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qdatastream.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qiodevice.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qpair.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qregexp.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qstringmatcher.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qbrush.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qvector.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qmatrix.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qpolygon.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qregion.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qline.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qtransform.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qpainterpath.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qimage.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qpixmap.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qsharedpointer.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qshareddata.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qsharedpointer_impl.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qhash.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qfont.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qfontmetrics.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qfontinfo.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtWidgets/qsizepolicy.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qcursor.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qkeysequence.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qevent.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qvariant.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qmap.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qdebug.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qtextstream.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qlocale.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qset.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qcontiguouscache.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qurl.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qurlquery.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qfile.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtCore/qfiledevice.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qvector2d.h \
+		../../../../Qt5.3.2/5.3/gcc_64/include/QtGui/qtouchdevice.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o loginwindow.o ../LinQuedin/loginwindow.cpp
+
 qrc_resources.o: qrc_resources.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o qrc_resources.o qrc_resources.cpp
 
 moc_mainwindow.o: moc_mainwindow.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_mainwindow.o moc_mainwindow.cpp
+
+moc_loginwindow.o: moc_loginwindow.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_loginwindow.o moc_loginwindow.cpp
 
 ####### Install
 
